--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -83,7 +83,7 @@
     
                
     <footer class="page-footer">
-        <div class="right">All Rights Reserved, &copy; 2022 PinDrop &nbsp;</div>
+        <div class="bottomright">All Rights Reserved, &copy; 2022 PinDrop &nbsp;</div>
     </footer>                       
     
 </body>
